--- a/ConventionTemplate/ConventionTemplate.csproj
+++ b/ConventionTemplate/ConventionTemplate.csproj
@@ -31,6 +31,7 @@
     <EmbeddedResource Include="App.xaml" />
     <EmbeddedResource Include="ConventionTemplatePage.xaml" />
     <EmbeddedResource Include="Images\background.jpg" />
+    <EmbeddedResource Include="Images\tomholland.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
